# cucura-backend

./: .gitignore  Cargo.toml  package-lock.json
src/: main.rs  sample_data.rs
src/models/: business.rs  business_review.rs  message.rs  mod.rs  notification.rs  payment.rs  payment_type.rs  profile.rs  rating.rs  review.rs  training.rs  user.rs
src/routes/: auth_routes.rs  business_review_routes.rs  business_routes.rs  message_routes.rs  mod.rs  payment_routes.rs  profile_routes.rs  rating_routes.rs  review_routes.rs  training_routes.rs  user_routes.rs
